<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ConnectaTech</string>
    <string name="content_column">Content</string>
    <string name="page_referrers">Referrers</string>
    <string name="refresh_action">Refresh</string>
    <string name="logout_action">Logout</string>
    <string name="page_news">News</string>
    <string name="trial_news">TrialNews</string>
    <string name="register_tab_title">Register</string>
    <string name="page_users">Providers</string>
    <string name="page_checkins">Check In\'s</string>
    <string name="title_column">Title</string>
    <string name="location_column">Location</string>
    <string name="user_column">User</string>
    <string name="date_column">Date</string>
    <string name="error_loading_users">Loading users failed</string>
    <string name="error_loading_news">Loading news failed</string>
    <string name="error_loading_checkins">Loading check-ins failed</string>
    <string name="no_users">No Users</string>
    <string name="no_news">No News</string>
    <string name="no_tech_services">No Services Found.\nTap here to add a Service.</string>
    <string name="no_tech_services_browse">No Services Found.\nTap here to filter results.</string>
    <string name="avatar">Avatar</string>
    <string name="choose">Choose</string>

    <!-- AuthenticatorActivity -->
    <string name="label_email_address_or_username">Username or Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_register_cust">Register as Customer</string>
    <string name="label_register_prov">Register as Provider</string>
    <string name="label_sign_in_as_guest">Continue as Guest</string>
    <string name="message_signing_in">Signing in…</string>
    <string name="blank_field_warning">Please populate this field</string>
    <string name="signup_link">New to Bootstrap? &lt;a href=http://www.androidbootstrap.com>Click here&lt;/a> to learn more.</string>
    <string name="message_bad_credentials">Email Address or Password is incorrect</string>
    <string name="message_auth_failed">Please enter a valid password</string>
    <string name="message_auth_failed_new_account">Please enter a valid email address &amp; password</string>
    <string name="timer_running">Timer is running</string>
    <string name="timer_is_paused">Timer is paused</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="title_timer">Timer</string>
    <string name="title_test">Test</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="title_home">Home</string>
    <string name="title_activity_test_">Test Activity</string>
    <string name="title_activity_provider">Profile</string>
    <string name="title_activity_customer">Profile</string>

    <!-- RegisterActivity -->
    <string name="register_header_cust">Create your profile.</string>
    <string name="register_header_prov">Become a provider.</string>
    <string name="label_submit">Submit</string>
    <string name="label_call">Call</string>
    <string name="label_email">Email</string>
    <string name="label_edit">Edit</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="label_zipcode">Zip Code</string>
    <string name="label_username">Username</string>
    <string name="label_email_address">Email Address</string>
    <string-array name="states">
        <item>AL</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="rating_title">About Us</string>
    <string name="title_example">Example</string>
    <string name="example_news">example_news</string>
    <string name="title_techservices">Offered Services</string>
    <string name="title_requestservice">Offered Services</string>
    <string name="techservice_news">example_news</string>
    <string name="title_browse_techservices">Browse Services</string>

    <string name="rating_activity">rating_activity</string>

    <string name="app_name1">Parse Image Download</string>
  
    <string name="menu_settings">Settings</string>
    <string name="button">Parse Image</string>

    <string name="title_activity_edit_photo">EditPhotoActivity</string>
    <string name="title_activity_edit_rating">EditRatingActivity</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_favorite">Favorites</string>
    <string name="action_new">cHANGE</string>
    <string name="menu_title">My Photos</string>
    <string name="image_upload">Image Upload</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="image_upload_title">Image Upload</string>
    <string-array name="ratings_array">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
        <item></item>
    </string-array>
    <!-- TechServicesFrag -->
    <string name="add_services">+ Add a Service</string>
    <string name="label_sign_in_as_provider">Continue as Provider</string>
    <string name="narrow_search">Narrow Your Search.</string>
    <string name="search_services">Tap here to filter results.</string>

    <!-- AddTechService Activity> -->
    <string name="activity_title">Describe your Service.</string>
    <string name="service_title">Title</string>
    <string name="service_category">Category</string>
    <string name="service_description">Description</string>
    <string name="service_base_price">Base Price</string>
    <string name="service_submit">Submit Service</string>
    <string name="label_remove_service">Remove Service</string>

    <string-array name="categories_array">
        <item>Web Devt</item>
        <item>Mobile Devt</item>
        <item>Wireless Networks</item>
        <item>Cable Mgmt</item>
        <item>Computer Repair</item>
        <item>Desktop App Devt</item>
        <item>IT Installation</item>
        <item>Phone Repair</item>
    </string-array>

    <string-array name="filter_categories_array">
        <item></item>
        <item>Web Devt</item>
        <item>Mobile Devt</item>
        <item>Wireless Networks</item>
        <item>Cable Mgmt</item>
        <item>Computer Repair</item>
        <item>Desktop App Devt</item>
        <item>IT Installation</item>
        <item>Phone Repair</item>
    </string-array>

    <string-array name="filter_states">
        <item></item>
        <item>AL</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <!--Request Activity -->
    <string name="no_requests">You currently have no\nrequests for your services.</string>
    <string name="no_requests_cust">You currently have no\nactive service requests.</string>
    <string name="provider_requests">Active Requests</string>
    <string name="label_request_service">Request Service</string>
    <string name="describe_request">Describe your request.</string>
    <string name="label_addl_info">List the specific problem/request.</string>
    <string name="label_retract_request">Retract Request</string>
    <string name="active_requests">Active Requests</string>
    <string name="title_activity_edit_image">Edit Image</string>
    <string name="select_image">Select Image</string>
    <string name="title_activity_edit_profile">Edit Profile</string>

</resources>