<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:weightSum="1">

            <TextView
                style="@style/ActivityHeaderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/narrow_search"
                android:id="@+id/registerTitle"
                android:background="@drawable/alternate_background_1"
                android:textColor="@color/text_activity_header"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/label_zipcode"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text"
                android:id="@+id/textView2" />

            <AutoCompleteTextView
                style="@style/ParseLoginUI.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_searchby_zip"
                android:completionThreshold="1"
                android:imeOptions="actionNext"
                android:inputType="number"/>

            <Button
                android:id="@+id/b_filter_tech_services"
                style="@style/ShadowText"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_background_states"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/label_submit"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>